--- a/composer.json
+++ b/composer.json
@@ -55,7 +55,11 @@
     "webcreator/yii2-revslider": "*",
     "yiidoc/yii2-timeago": "*",
     "yeesoft/yee-i18n": "*",
-    "nemmo/yii2-attachments": "~1.0.0"
+    "nemmo/yii2-attachments": "~1.0.0",
+    "arogachev/yii2-many-to-many": "0.2.*",
+    "yii2mod/yii2-star-rating": "*",
+    "chiliec/yii2-vote": "^4.1"
+
   },
   "require-dev": {
     "yiisoft/yii2-codeception": "~2.0.5",
