--- a/composer.json
+++ b/composer.json
@@ -37,29 +37,29 @@
     "yeesoft/yii2-yee-page": "~0.1.0",
     "yeesoft/yii2-yee-seo": "~0.1.0",
     "yeesoft/yii2-comments": "~0.1.0",
-    "yeesoft/yii2-yee-comment": "~0.1.0",
-    "2amigos/yii2-file-upload-widget": "~1.0",
-    "2amigos/yii2-gallery-widget": "~1.0",
-    "FortAwesome/Font-Awesome": "*",
-    "yeesoft/yii2-yee-generator": "~0.1.0",
     "yeesoft/yee-theme": "0.1.0",
     "yeesoft/yii2-yee-eav": "~0.1.0",
+    "yeesoft/yii2-yee-generator": "~0.1.0",
+    "yeesoft/yee-i18n": "*",
+    "FortAwesome/Font-Awesome": "*",
+    "kartik-v/yii2-widget-fileinput": "*",
     "kartik-v/yii2-widget-select2": "@dev",
+    "kartik-v/yii2-helpers": "dev-master",
     "kartik-v/yii2-widget-activeform": "@dev",
+    "kartik-v/yii2-widgets": "*",
     "bizley/cookiemonster": "^1.0",
     "geertw/yii2-adsense": "^1.0",
     "yiimaker/yii2-social-share": "^1.3",
     "2amigos/yii2-tinymce-widget": "~1.1",
-    "kartik-v/yii2-widget-fileinput": "*",
+    "2amigos/yii2-file-upload-widget": "~1.0",
+    "2amigos/yii2-gallery-widget": "~1.0",
     "yii-dream-team/yii2-upload-behavior": "*",
     "webcreator/yii2-revslider": "*",
     "yiidoc/yii2-timeago": "*",
-    "yeesoft/yee-i18n": "*",
     "nemmo/yii2-attachments": "~1.0.0",
     "arogachev/yii2-many-to-many": "0.2.*",
     "yii2mod/yii2-star-rating": "*",
     "v0lume/yii2-meta-tags": "*"
-
   },
   "require-dev": {
     "yiisoft/yii2-codeception": "~2.0.5",
